override font family to fix the "non rendering issue" on IE9 under certain, unknown, conditions with hardware acceleration.
git-svn-id: https://pacps01.oecd.org/svn/publication-index/trunk@274 370d6576-d9c0-ee4c-9843-071cdce0ebce

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -8,6 +8,15 @@
 }
 */
 
+body,
+input,
+button,
+select,
+textarea,
+.navbar-search .search-query {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif !important;
+}
+
 .infoBox {
     width: 150px;
     max-width: 200px;
